# pg_inventory

./: .editorconfig  .env  .gitignore  .ls-lint.yml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  pants.toml  pyproject.toml
db_object_kind/ACCESS_METHOD/: README.md  all.params.toml  all.sql.tpl
db_object_kind/AGGREGATE/: README.md  all.params.toml  all.sql.tpl
db_object_kind/CAST/: README.md  all.params.toml  all.sql.tpl
db_object_kind/COLLATION/: README.md  query.params.toml  query.sql.tpl
db_object_kind/COLUMN/: README.md  query.params.toml  query.sql.tpl
db_object_kind/CONSTRAINT/: README.md  query.params.toml  query.sql.tpl
db_object_kind/CONVERSION/: README.md  query.params.toml  query.sql.tpl
db_object_kind/DATABASE/: query.params.toml  query.sql.tpl
db_object_kind/DOMAIN/: README.md
db_object_kind/EVENT_TRIGGER/: README.md  query.params.toml  query.sql.tpl
db_object_kind/EXTENSION/: README.md  query.params.toml  query.sql.tpl
db_object_kind/FOREIGN_DATA_WRAPPER/: README.md  query.params.toml  query.sql.tpl
db_object_kind/FOREIGN_TABLE/: README.md  many.params.toml  many.sql.tpl
db_object_kind/FUNCTION/: README.md
db_object_kind/INDEX/: many.params.toml
sample_dbs/: adventureworks.schema.dump.sql  airflow.schema.dump.sql  chinook.schema.dump.sql  clubdata.schema.dump.sql  covid.schema.dump.sql  northwind.schema.dump.sql  omnibus.schema.dump.sql  polls.schema.dump.sql  retail_analytics.schema.dump.sql  sakila.schema.dump.sql  sportsdb.schema.dump.sql
scripts/: find_test_deps.sh  refresh_sample_databases.sh
(+907 files in other folders)
